add links to index.html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>African recipes</title>
 </head>
 <body>
-    <h1>RECIPES ODIN</h1>
+    <h1 id="header">AFRICAN RECIPES</h1>
+    <div>
+        <ul>
+            <li><a href="recipess/fufu.html">FUFU RECIPE</a></li>
+            <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li>
+            <li><a href="recipess/stew.html">STEW RECIPE</a></li>
+        </ul>
+    </div>
+
+
+
 </body>
 </html>
