updated index and added images folder

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <h1 id="header">AFRICAN RECIPES</h1>
     <div>
         <ul>
-            <li><a href="recipess/fufu.html">FUFU RECIPE</a></li>
-            <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li>
-            <li><a href="recipess/stew.html">STEW RECIPE</a></li>
+            <li><a href="recipess/fufu.html">FUFU RECIPE</a></li><br>
+            <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li><br>
+            <li><a href="recipess/stew.html">STEW RECIPE</a></li><br>
         </ul>
     </div>
+    <a href="#header">Return to the top</a>
 
 
 
