--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 id="header">AFRICAN RECIPES</h1>
+    <img src="imagess/chefpicture.jpg" alt="picture of African chefs" style="width:800px; height: 450px;">
     <div>
         <ul>
             <li><a href="recipess/fufu.html">FUFU RECIPE</a></li><br>
