--- a/recipess/fufu.html
+++ b/recipess/fufu.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>FUFU RECIPE</h1>
+    <img src="imagess/fufu.jpg" alt="picture of fufu" style="width: 800px; height: 450px;">
+
 </body>
 </html>
