--- a/recipess/jollof.html
+++ b/recipess/jollof.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>JOLLOF RECIPE</h1>
+    <img src="imagess/jollof-rice.jpg" alt=" picture of jollof-rice" style="width: 800px; height: 450px;">
 </body>
 </html>
