updates imgs links

--- a/recipess/fufu.html
+++ b/recipess/fufu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>FUFU RECIPE</h1>
-    <img src="imagess/fufu.jpg" alt=" picture of fufu ">
+    <img src="imagess/fufupicture.jpg" alt=" picture of fufu ">
 
 </body>
 </html>
