--- a/recipess/stew.html
+++ b/recipess/stew.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>STEW RECIPE</h1>
-    <img src="imagess/stew.jpg" alt="picture of stew" style="width: 800px; height: 450px;">
+    <img src="imagess/stewpicture.jpg" alt="picture of stew" style="width: 800px; height: 450px;">
 </body>
 </html>
