fixed the problems with the imgs

--- a/recipess/jollof.html
+++ b/recipess/jollof.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>JOLLOF RECIPE</h1>
-    <img src="imagess/jollofricepicture.jpg" alt=" picture of jollof-rice" style="width: 800px; height: 450px;">
+    <img src="/imagess/jollofricepicture.jpg" alt=" picture of jollofrice" style="width: 800px; height: 450px;">
 </body>
 </html>
