--- a/recipess/fufu.html
+++ b/recipess/fufu.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fufu recipe</title>
 </head>
 <body>
     <h1>FUFU RECIPE</h1>
-    <img src="imagess/fufupicture.jpg" alt=" picture of fufu ">
+    <img src="/imagess/fufupicture.jpg" alt=" picture of fufu " style="width: 800px; height: 450px;">
 
 </body>
 </html>
