added description about african foods

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <h1 id="header">AFRICAN RECIPES</h1>
     <img src="imagess/chefpicture.jpg"  alt="picture of African chefs" style="width:800px; height: 450px;">
     <div>
+        <h3> ABOUT AFRICAN FOODS </h3>
+        <p><strong>African cuisine </strong> is a treasure trove of flavors, traditions, and cultural diversity. 
+            Spanning across the vast continent, African foods offer a vibrant tapestry of tastes, ingredients, and culinary techniques.
+             From the fiery stews of North Africa to the savory rice dishes of West Africa, and the exotic game meats of Southern Africa,
+              every region boasts its unique culinary identity.</p>
+
+            <p><strong> African cuisine</strong> is characterized by its use of diverse ingredients, often locally sourced. 
+            Grains like millet, sorghum, and rice form the basis of many dishes, complemented by an array of vegetables 
+            such as okra, cassava, and yams. Spices like cumin, coriander, and chili peppers add depth and heat to the dishes, 
+            creating a sensory explosion in every bite.</p>
+            
+            <p>Food holds profound cultural significance in Africa, often symbolizing unity, hospitality, 
+            and heritage. Family gatherings, celebrations, and rituals are often marked by the preparation and
+             sharing of traditional dishes, reinforcing the ties that bind communities together.</p><br>
+            
+            <p>Exploring African foods is not just a <b>culinary journey</b> but a cultural immersion, offering a 
+            unique window into the continent's history and traditions. It's a celebration of diversity and 
+            a testament to the rich tapestry of flavors that make up African cuisine.</p><br>
+    </div>
+    <div>
+        <h3>Some African Recipes</h3>
         <ul>
             <li><a href="recipess/fufu.html">FUFU RECIPE</a></li><br>
             <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li><br>
