--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="recipess/stew.html">STEW RECIPE</a></li><br>
         </ul>
     </div>
-    <a href="#header">Return to the top</a>
+    <a href="#header"><button type="submit"> Return to the top</button></a>
 
 
 
