added content to the jollofrice page

--- a/recipess/jollof.html
+++ b/recipess/jollof.html
@@ -3,10 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jollofrice recipe</title>
 </head>
 <body>
     <h1>JOLLOF RECIPE</h1>
     <img src="/imagess/jollofricepicture.jpg" alt=" picture of jollofrice" style="width: 800px; height: 450px;">
+    <div>
+        <h2>Description of Jollofrice</h2>
+        <p> <strong> Jollof rice </strong>is a vibrant and flavorful West African dish. It features parboiled 
+            rice cooked with tomatoes, onions, peppers, and a blend of spices. This one-pot 
+            delight is known for its vivid red or orange color and is often enriched with 
+            vegetables and protein like chicken or shrimp, making it a beloved and hearty meal.</p>
+    </div>
+    <div>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 cups of long-grain parboiled rice</li>
+            <li>2-3 large tomatoes or 1 cup of tomato paste</li>
+            <li>1 large onion, finely chopped</li>
+            <li>1-2 Scotch bonnet peppers or other hot peppers (adjust to your spice preference)</li>    
+            <li>1/2 cup of vegetable oil</li>    
+            <li>1 teaspoon of thyme</li>    
+            <li>1 teaspoon of curry powder</li>    
+            <li>2-3 bay leaves</li>    
+            <li>2-3 cups of chicken or vegetable stock (or water)</li>    
+            <li>Salt to taste</li>    
+            <li>Optional: 1-2 cups of diced vegetables (bell peppers, peas, carrots)</li>    
+            <li>Optional: Protein of your choice (chicken, beef, shrimp, etc.)</li>
+        </ul>
+    </div>
+    <div>
+        <h3> Procedure</h3>
+            <ol>
+        
+            <li>Rinse the rice thoroughly under cold water until the water runs clear. 
+                Drain and set aside.</li><br>
+            <li>Blend the Tomatoes and Peppers:
+                If using fresh tomatoes, blend them with the Scotch bonnet peppers until you have 
+                a smooth tomato puree. If using tomato paste, skip this step.</li><br>
+            <li>Sauté Onions:
+                In a large pot or skillet, heat the vegetable oil over medium heat. Add the chopped 
+                onions and sauté until they become translucent.</li><br>
+            <li>Add Tomato Sauce:
+                Add the tomato puree (or tomato paste) to the pot. Stir and cook for about 10-15 
+                minutes, allowing the tomatoes to reduce and the oil to separate from the sauce.</li><br>
+            <li>Season the Sauce:
+                Add thyme, curry powder, bay leaves, and salt to the tomato sauce. Stir well to 
+                incorporate the spices.</li><br>
+            <li>Add Stock (or Water):
+                Pour in the chicken or vegetable stock (or water) and stir. Bring the mixture to a 
+                simmer.</li><br>
+            <li>Add Rice:
+                Add the rinsed and drained rice to the pot. Stir to ensure the rice is well coated 
+                with the tomato sauce.</li><br>
+            <li>Add Protein and Vegetables (Optional):
+                If you're using protein (e.g., chicken, beef, or shrimp), add it to the pot at 
+                this point. Also, add diced vegetables if desired.</li><br>
+            <li>Simmer and Cover:
+                Reduce the heat to low, cover the pot with a tight-fitting lid, and let the 
+                Jollof rice simmer for about 20-30 minutes. Stir occasionally to prevent sticking, 
+                and add more stock or water if needed.</li><br>
+            <li>Check for Doneness:
+                The rice should absorb the sauce and become tender. Make sure the protein is fully 
+                cooked.</li><br>
+            <li>Serve:
+                Once the rice is cooked and the sauce has been absorbed, remove the bay leaves, 
+                fluff the rice with a fork, and serve your delicious Jollof rice hot.</li>
+            </ol>
+    </div>
+    <div><a href="../index.html"><button type="submit">Home Page</button></a></div>
 </body>
 </html>
