added style to recipes page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipess/fufustyle.css">
     <title>African recipes</title>
 </head>
 <body>
-    <h1 id="header">AFRICAN RECIPES</h1>
-    <img src="imagess/chefpicture.jpg"  alt="picture of African chefs" style="width:800px; height: 450px;">
-    <div>
+    <div class="h1"><h1 id="header" >AFRICAN RECIPES</h1></div>
+    <img src="imagess/chefpicture.jpg"  alt="picture of African chefs" style="width:800px; height: 450px;" class="chefmg">
+    <div class="bodyy">
         <h3> ABOUT AFRICAN FOODS </h3>
         <p><strong>African cuisine </strong> is a treasure trove of flavors, traditions, and cultural diversity. 
             Spanning across the vast continent, African foods offer a vibrant tapestry of tastes, ingredients, and culinary techniques.
@@ -30,9 +31,9 @@
     </div>
     <div>
         <h3>Some African Recipes</h3>
-        <ul>
-            <li><a href="recipess/fufu.html">FUFU RECIPE</a></li><br>
-            <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li><br>
+        <ul class="list">
+            <li><a href="recipess/fufu.html">FUFU RECIPE</a></li>
+            <li><a href="recipess/jollof.html">JOLLOF RECIPE</a></li>
             <li><a href="recipess/stew.html">STEW RECIPE</a></li><br>
         </ul>
     </div>
