added content to stew page

--- a/recipess/stew.html
+++ b/recipess/stew.html
@@ -3,10 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stew recipe</title>
 </head>
 <body>
     <h1>STEW RECIPE</h1>
     <img src="/imagess/stewpicture.jpg" alt="picture of stew" style="width: 800px; height: 450px;">
+    <div>
+        <h2>Description of Stew</h2>
+        <p><strong>Stew</strong> is a hearty and comforting dish enjoyed worldwide. 
+            It typically consists of ingredients like meat, vegetables, and 
+            aromatic seasonings<br> slow-cooked in a flavorful liquid, often broth or 
+            tomato-based sauce. Stews vary widely in taste and texture, offering 
+            endless possibilities for creativity in the kitchen,<br> making them a 
+            versatile and satisfying meal option.</p>
+    </div>
+    <div>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 to 1.5 pounds of meat (beef, chicken, lamb, or pork), cubed</li>
+            <li>2-3 tablespoons of cooking oil</li> 
+            <li>1 large onion, chopped</li> 
+            <li>2-3 cloves of garlic, minced</li>
+            <li>2-3 carrots, peeled and chopped</li> 
+            <li>2-3 potatoes, peeled and cubed (optional)</li>
+            <li> celery stalks, chopped (optional)</li>
+            <li>1 can of diced tomatoes (14-15 ounces)</li>
+            <li>4-5 cups of broth (chicken, beef, or vegetable)</li>
+            <li>Herbs and spices (bay leaves, thyme, rosemary, salt, and pepper)</li>
+            <li>Salt and pepper to taste</li>
+        </ul>
+    </div>
+    <div>
+        <h3>Procedure</h3>
+        <ol>
+            <li>Brown the Meat:<br>
+                Heat the cooking oil in a large pot or Dutch oven over medium-high heat. 
+                Add the cubed meat and brown it on all sides. This adds flavor to the stew. 
+                Remove the meat and set it aside.</li><br>
+            <li>Sauté the Onions and Garlic:<br>
+                In the same pot, add the chopped onions and minced garlic. Sauté them until they 
+                become soft and translucent.</li><br>
+            <li>Add the Vegetables:<br>
+                Add the chopped carrots, potatoes (if using), and celery (if using) to the pot. 
+                Sauté them for a few minutes until they start to soften.</li><br>
+            <li>Return the Meat:<br>
+                Put the browned meat back into the pot and stir to combine it with the 
+                vegetables.</li><br>
+            <li>Add the Tomatoes:<br>
+                Pour in the can of diced tomatoes (including the juice) and stir well.</li><br>
+            <li>Season the Stew:<br>
+                Add bay leaves, thyme, rosemary, salt, and pepper to the pot. Adjust the seasonings 
+                to your taste.</li><br>
+            <li>Pour in the Broth:<br>
+                Pour the broth into the pot, making sure it covers the meat and vegetables. 
+                Adjust the amount of liquid based on your desired stew thickness.</li><br>
+            <li>Simmer:<br>
+                Bring the stew to a boil, then reduce the heat to low. Cover the pot and let it 
+                simmer for 1-2 hours, or until the meat is tender and the flavors have melded. 
+                Stir occasionally.</li><br>
+            <li>Taste and Adjust:<br>
+                Taste the stew and adjust the seasonings as needed. You can also add more liquid if 
+                the stew becomes too thick during cooking.</li><br>
+            <li>Serve:<br>
+                Remove the bay leaves and serve your delicious stew hot. It's often enjoyed with 
+                bread, rice, or mashed potatoes.
+                Feel free to customize your stew with your favorite vegetables and spices to create 
+                your own unique flavor profile</li><br>
+        </ol>
+    </div>
+    <div> <a href="../index.html"><button type="submit">Home Page</button></a> </div>
 </body>
 </html>
